--- a/wp-content/themes/SwiftBio/scss/_q.scss
+++ b/wp-content/themes/SwiftBio/scss/_q.scss
@@ -112,7 +112,7 @@ img {
     height: auto;
 }
 
-input[type=text], input[type=email], input[type=tel], textarea {
+input[type=text], input[type=email], input[type=tel], input[type=password], textarea {
     border: 1px solid $gray;
 
     @include responsive($mobile-sm) {
